# hair-AI

./: .gitignore  Dockercompose.yml  EMAIL_SETUP.md  NOTES  README.md  README_tomato.md  a.txt  client.py  docker-compose.yml  elastic_to_pydantic.py  elasticsearch_model_generator.py  er.md  flow.md  moretesting.py  pyproject.toml  requirements_tomato.txt  testing.py
ai/: .dockerignore  Dockerfile  pyproject.toml  test_parser_batch.py  test_parser_endpoint.py
ai/app/: .env  aaa.py  config.py  entrypoint.sh  main.py  pyproject.toml  test_parser_endpoint.py  test_resume_parser.py  utils.py
ai/app/routers/: __init__.py  matcher_router.py  parser_router.py  skills_router.py
ai/app/services/llm/: llm_agent.py
ai/app/services/llm/agent_dir/: agent.py  test_agent_sync.py
ai/app/services/llm/entities_models/: candidate_pydantic.py
ai/app/services/matcher/: matcher.py
ai/app/services/skills_module/: __init__.py  cast.py  gg.py  ner_skills.py
backend/: .dockerignore  Dockerfile  RESUME_STORAGE.md  pyproject.toml
backend/app/: .env  backend_test.py  check_rls_policies.py  entrypoint.sh  generate_schema.py  init.sql  main.py  populate_company.py  postgresql-compose.yml  pyproject.toml  test_crud_functions.py  test_csv.py  test_relations.py  test_responsibilities.py  test_rls.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 21596cf91729_add_list_of_questions_for_a_job.py  aa5f1ff061b6_add_list_of_questions_for_a_job.py  bb8263755adb_initial_migration.py  de714ad92a08_add_list_of_questions_for_a_job.py
backend/app/api/v1/endpoints/: ai_interviewer.py  analytics.py  application.py  auth.py  candidate.py  chatbot.py  company.py  form_key.py  hr.py  interview.py  job.py  job_form_key_constraint.py  match.py  recruiter_company_link.py  scripts.py
backend/app/core/: auth_middleware.py  config.py  database.py  dependencies.py  logging_utils.py  middlewares.py  security.py
backend/app/crud/: __init__.py  crud_application.py  crud_candidate.py  crud_company.py  crud_form_key.py  crud_hr.py  crud_interview.py  crud_job.py  crud_job_form_key_constraint.py  crud_match.py  crud_recruiter_company_link.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 08b01fb7d771_f.py  2025fc1f4e83_.py  232b12738a59_assign_required_fields.py  32e8f06b31d9_add_key_constraints_for_form_keys_and_.py  3c6f6e830ad0_seperate_base_model_and_table.py  49b5f4b40e12_f.py  559c8ac730d4_add_employer_id_for_candidate.py  6143e3f55305_change_the_db.py  6aff9a3d25bd_change_the_interview_table_types.py  6d745e3481f9_seperate_base_model_and_table.py  7473cc497ab6_seperate_base_model_and_table.py  79f65d031014_chagne_the_match_base_model_into_a_json_.py  7e208e325b64_fix_the_connections.py  a88e5c05bd06_change_the_db.py  b1fa7664b42c_add_constraints_per_form_key_for_each_.py  c5d6315affa8_seperate_base_model_and_table.py  c6857cc1a119_add_enum_values_for_enum_types.py  c9df5dc322bc_connect_match_to_job_and_candidate_only_.py  e7aa5cf3735d_a.py  f392f3d7d445_fix_the_connections.py  f4d8159e52d1_f.py  fa6414b154d0_fix_the_connections.py  fb858d7a57e3_break_job_data.py  fcfd91f7084a_initial_db.py  fd7c2abdbb9d_initial_database_creation.py
backend/app/models/: candidate_pydantic.py  models.py
backend/app/schemas/: __init__.py  application.py  candidate.py  candidate_pydantic.py  company.py  form_key.py  hr.py  interview.py  job.py  job_form_key_constraint.py  match.py  recruiter_company_link.py
backend/app/scripts/: README.md  add_analysis_column.py  application_matcher_batch.py  create_tables.py  db_setup.sql  resume_parser_batch.py
backend/app/services/: email_service.py  matching.py  otp_service.py  resume_upload.py
backend/app/services/mcp_sqlalchemy_server/: .env  __init__.py  client.py  odbc.ini  odbcinst.ini  server.py  test_filtering.py
backend/app/utils/: file_utils.py  pydantic_utils.py
examples/pydantic_ai_multi_agent_demo/: README_tomato.md  requirements_tomato.txt  tomato.py
frontend/: Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.css  App.tsx  types.js  types.ts
frontend/src/components/: AppSidebar.tsx  FloatingBackground.tsx  MainContentHeader.tsx
frontend/src/components/ui/: sonner.tsx
frontend/src/pages/: AddApplication.tsx  AddEditInterview.tsx  ApplicationDashboard.tsx  Candidates.tsx  ChatBot.tsx  CompanyAnalytics.tsx  CreateEditJob.tsx  FormKeysManagement.tsx  Index.tsx  InterviewList.tsx  JobAnalytics.tsx  JobApplicationForm.tsx  JobDashboard.tsx  JobDetails.tsx  Login.tsx  MatchedCandidates.tsx  NotFound.tsx  OnboardingFlow.tsx  Profile.tsx  SignUp.tsx  ViewEditApplication.tsx
frontend/src/services/: api.js
frontend/src/utils/: README.md
k8s/: ai-service.yaml  backend-service.yaml  frontend-service.yaml  network-policies.yaml  pgadmin.yaml  postgres-db.yaml
k8s-deploy/: CONVERSION-ANALYSIS.md  ai-claim0-persistentvolumeclaim.yaml  ai-pod.yaml  ai-service.yaml  backend-claim0-persistentvolumeclaim.yaml  backend-pod.yaml  backend-service.yaml  configmaps.yaml  db-pod.yaml  db-service.yaml  deployment-order.md  frontend-pod.yaml  frontend-service.yaml  local-pgdata-persistentvolumeclaim.yaml  namespace.yaml  pgadmin-data-persistentvolumeclaim.yaml  pgadmin-pod.yaml  pgadmin-service.yaml  secrets.yaml
matcher/: matcher.py
mcp/: pyproject.toml
parser/: parsed_resume_<class 'PIL.JpegImagePlugin.JpegImageFile'>.json  parsed_resume_<class 'str'>.json  parsed_resume_PDF.json  resume_parser.py  test_resume_parser.py
parser/agent_dir/: test_agent_async.py
parser/entities_models/: job_pydantic.py
random_files/: elastic_to_pydantic.py  elasticsearch_model_generator.py  graph.py  inetviewer.py  pydanticai_graph.py  pyproject.toml  question_bank.json  streamlit_app.py  tomato.py
random_files/elastic_query.py/: elasticsearch_model_generator.py  streamlit_viewer.py
random_files/llm/: llm_agent.py
random_files/llm/agent_dir/: agent.py
skills_module/: cast.py  ner_skills.py
