[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "ipython>=9.2.0",
    "pillow>=11.2.1",
    "pydantic-ai>=0.2.6",
    "pydantic[email]>=2.11.4",
    "pymupdf>=1.25.5",
    "rapidfuzz>=3.13.0",
    "sentence-transformers>=4.1.0",
    "skillner>=1.0.3",
    "spacy>=3.8.5",
]
