[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.16.1",
    "fastapi>=0.115.12",
    "load-dotenv>=0.1.0",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.4",
    "pymupdf>=1.25.5",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
]
