[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.16.1",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "load-dotenv>=0.1.0",
    "matplotlib>=3.10.3",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.4",
    "pymupdf>=1.25.5",
    "pymysql>=1.1.1",
    "pytest>=8.3.5",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-schemadisplay>=2.0",
    "sqlmodel>=0.0.24",
    "torch>=2.7.0",
    "transformers>=4.52.3",
    "uvicorn>=0.34.2",
]
