[project]
name = "random-files"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncio>=3.4.3",
    "elasticsearch>=8.0.0,<9.0.0",
    "fastapi>=0.115.13",
    "jinja2>=3.1.6",
    "logfire>=3.21.1",
    "nest-asyncio>=1.6.0",
    "openai>=1.91.0",
    "pillow>=11.2.1",
    "pydantic-ai>=0.3.3",
    "pymupdf>=1.26.1",
    "python-json-logger>=3.3.0",
    "python-multipart>=0.0.20",
    "rapidfuzz>=3.13.0",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
]
