[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiofiles>=24.1.0",
    # Pin cmake below 4.0 to keep FindBoost module (needed by camel-kenlm build)
    "cmake<4.0",
    "camel-kenlm>=2025.4.8",
    "camel-tools>=1.5.2",
    "fastapi>=0.115.12",
    "fuzzywuzzy>=0.18.0",
    "gliner[tokenizers]>=0.2.21",
    "indic-nlp-library>=0.92",
    "ipython>=9.2.0",
    "janome>=0.5.0",
    "jieba>=0.42.1",
    "langdetect>=1.0.9",
    "pillow>=11.2.1",
    "pydantic-ai>=0.2.6",
    "pydantic[email]>=2.11.4",
    "pymupdf>=1.25.5",
    "python-levenshtein>=0.27.1",
    "python-mecab-ko>=1.3.7",
    "python-multipart>=0.0.20",
    "rapidfuzz>=3.13.0",
    "sentence-transformers>=4.1.0",
    "skillner>=1.0.3",
    "spacy>=3.8.5",
    "thinc>=8.3.6",
]
