[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.16.1",
    "devtools>=0.12.2",
    "fastapi>=0.115.12",
    "google-api-python-client>=2.170.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "jose>=1.0.0",
    "load-dotenv>=0.1.0",
    "matplotlib>=3.10.3",
    "mcp>=1.9.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-ai[mcp]>=0.2.14",
    "pydantic[email]>=2.11.4",
    "pymupdf>=1.25.5",
    "pymysql>=1.1.1",
    "pyodbc>=5.2.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-schemadisplay>=2.0",
    "sqlmodel>=0.0.24",
    "torch>=2.7.0",
    "transformers>=4.52.3",
    "uvicorn>=0.34.2",
    "fastmcp>=2.7.1",
    "mcp[cli]>=1.4.1",
    "pydantic-ai-slim[mcp]>=0.2.16",
    "pydantic-ai>=0.2.16",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.0.1",
    "rapidfuzz>=3.13.0",
    "faker>=37.4.0",
    "apscheduler>=3.11.0",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "logfire>=3.19.0",
    "aiosmtplib>=3.0.2",
    "email-validator>=2.2.0",
    "reportlab>=4.0.0",
]
